change synbol type

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -22,7 +22,7 @@
     .form
       %form.new_message
         .input-box 
-          %input.input-box__text{:name => "message[content]", :placeholder => "type a message", :type => "text"}
+          %input.input-box__text{name: "message[content]", placeholder: "type a message", :type => "text"}
           %label.input-box__image{for: "message_image"}
             =fa_icon 'image'
             %input.input-box__image__file{type: "file", name: "message[image]", id: "message_image"}
