change how to wright(class)

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,5 @@
 .message__upper-info
-  %P{class: "message__upper-info__talker"} sho40
-  %P{class: "message__upper-info__date"} 2019/09/22(sun) 23:29:15
-%p{class: "message__text"} hello!
+  %P.message__upper-info__talker sho40
+  %P.message__upper-info__date 2019/09/22(sun) 23:29:15
+%p.message__text hello!
 
