--- a/app/views/messages/_group.html.haml
+++ b/app/views/messages/_group.html.haml
@@ -1,3 +1,3 @@
 .group
-  %p{class: "group__group-name"} f
-  %p{class: "group__latest-message"} hello!
+  %p.group__group-name f
+  %p.group__latest-message hello!
