--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,7 +2,7 @@
   .chat-side
     .side-header
       .side-header__box
-        %p{class: "side-header__box__user-name"} sho40
+        %p.side-header__box__user-name sho40
         .side-header__box__menu
           = fa_icon 'edit', class: "side-header__box__menu"
           %span<>
@@ -13,8 +13,8 @@
   .chat-main
     .main-header
       .main-header__left-box
-        %h2{class: "main-header__left-box__current-group"} f
-        %ul{class: "main-header__left-box__member-list"} sho40 
+        %h2.main-header__left-box__current-group f
+        %ul.main-header__left-box__member-list sho40 
       .main-header__edit-btn Edit
     .messages
       .message
