--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
 @import ".//reset";
 @import "font-awesome";
-@import "messages"
+@import "messages";
+@import "modules/user";
+@import "modules/flash";
