--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,8 +5,9 @@
         %p.side-header__box__user-name sho40
         %ul.side-header__box__menu
           %li.side-header__box__menu__new-group
-            = fa_icon 'edit'
-            %span<>
+            = link_to new_group_path do
+              = fa_icon 'edit', class: 'icon'
+              %span<>
           %li.side-header__box__menu__edit-user
             = link_to edit_user_path(current_user) do
               = fa_icon 'cog', class: 'icon'
