--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -48,13 +48,16 @@ $white: #ffffff;
       overflow: scroll;
       .group {
         margin-bottom: 40px;
-        color: $white;
-        &__group-name {
+        &__name {
           font-size: 15px;
           margin-bottom: 5px;
+          color: $white;
+          text-decoration: none;
         }
-        &__latest-message {
+        &__message {
           font-size: 11px;
+          color: $white;
+          text-decoration: none;
         }
       }
     }
