--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,25 +1,13 @@
 .wrapper
   .chat-side
-    .side-header
-      .side-header__box
-        %p.side-header__box__user-name sho40
-        %ul.side-header__box__menu
-          %li.side-header__box__menu__new-group
-            = link_to new_group_path do
-              = fa_icon 'edit', class: 'icon'
-              %span<>
-          %li.side-header__box__menu__edit-user
-            = link_to edit_user_path(current_user) do
-              = fa_icon 'cog', class: 'icon'
-              %span<>
-    .groups
-      = render "group", locals: {group: @group}
+    = render "side_ber"
   .chat-main
     .main-header
       .main-header__left-box
         %h2.main-header__left-box__current-group f
         %ul.main-header__left-box__member-list sho40 
       .main-header__edit-btn Edit
+        = link_to 
     .messages
       .message
         = render partial: "message", locals: { message: @message }
