--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,23 +1,19 @@
 .wrapper
   .chat-side
-    = render "side_ber"
+    = render 'side_bar'
   .chat-main
     .main-header
       .main-header__left-box
         %h2.main-header__left-box__current-group f
         %ul.main-header__left-box__member-list sho40 
       .main-header__edit-btn Edit
-        = link_to 
     .messages
-      .message
-        = render partial: "message", locals: { message: @message }
+      = render @messages
     .form
-      %form.new_message
-        .input-box 
-          %input.input-box__text{name: "message[content]", placeholder: "type a message", :type => "text"}
-          %label.input-box__image{for: "message_image"}
-            =fa_icon 'image'
-            %input.input-box__image__file{type: "file", name: "message[image]", id: "message_image"}
-        %input{type: "submit", value: "Send",class: "submit-btn"}
-
-
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'new_message', placeholder: 'type a message'
+          .input-box 
+            = f.label :image, class: 'input-box__image' do
+              = fa_icon 'image'
+              = f.file_field :image, class: 'input-box__image__file' 
+          = f.submit 'Send', class: 'submit-btn' 
