--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,21 +1,22 @@
-.side-header
-  .side-header__box
-    %h3.side-header__box__user-name
-      = current_user.nickname
-    %ul.side-header__box__menu
-      %li.side-header__box__menu__new-group
-        = link_to new_group_path do
-          = fa_icon 'edit', class: 'icon'
-          %span<>
-      %li.side-header__box__menu__edit-user
-        = link_to edit_user_path(current_user) do
-          = fa_icon 'cog', class: 'icon'
-          %span<>
-.groups
-  - current_user.groups.each do |group|
-    = link_to group_messages_path(group) do
-      .group
-        .group__name
-          = group.name
-        .group__message
-          = group.show_last_message
+.chat-side
+  .side-header
+    .side-header__box
+      %h3.side-header__box__user-name
+        = current_user.nickname
+      %ul.side-header__box__menu
+        %li.side-header__box__menu__new-group
+          = link_to new_group_path do
+            = fa_icon 'edit', class: 'icon'
+            %span<>
+        %li.side-header__box__menu__edit-user
+          = link_to edit_user_path(current_user) do
+            = fa_icon 'cog', class: 'icon'
+            %span<>
+  .groups
+    - current_user.groups.each do |group|
+      = link_to group_messages_path(group) do
+        .group
+          .group__name
+            = group.name
+          .group__message
+            = group.show_last_message
