--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -15,13 +15,15 @@ $white: #ffffff;
       display: flex;
       align-items: center;
       padding: 0 20px;
-      font-weight: bold;
       &__box {
         font-size: 16px;
         width: 100%;
         display: flex;
         float: left;
         justify-content: space-between;
+        &__user-name {
+          font-weight: bold;
+        }
         &__menu{
           display: flex;
           &__new-group {
