--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,8 +3,12 @@
   .chat-main
     .main-header
       .main-header__left-box
-        %h2.main-header__left-box__current-group f
-        %ul.main-header__left-box__member-list sho40 
+        %h2.main-header__left-box__current-group 
+          = @group.name
+        %ul.main-header__left-box__member-list 
+          - @group.users.each do |group_users|
+            = group_users.nickname
+
       .main-header__edit-btn Edit
     .messages
       = render @messages
