--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -97,6 +97,7 @@ $white: #ffffff;
         border: solid 1px #38AEF0;
         position: absolute;
         right: 40px;
+        text-decoration: none;
       }
     }
     .messages {
