--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -14,9 +14,10 @@
       = render @messages
     .form
       = form_for [@group,@message] do |f|
-        .input-box 
-          = f.text_field :content, class: 'new_message', placeholder: 'type a message'
-          = f.label :image, class: 'input-box__image' do
-            = fa_icon 'image'
-            = f.file_field :image, class: 'input-box__image__file' 
-        = f.submit 'Send', class: 'submit-btn' 
+        .new_message
+          .input-box 
+            = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+            = f.label :image, class: 'input-box__image' do
+              = fa_icon 'image'
+              = f.file_field :image, class: 'input-box__image__file' 
+          = f.submit 'Send', class: 'submit-btn' 
