--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -5,6 +5,7 @@
       %ul
         - group.errors.full_messages.each do |message|
           %li= message
+
   .chat-group-form__field
     .chat-group-form__field--left
       = f.label :name, class: 'chat-group-form__label'
@@ -21,12 +22,18 @@
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
-    
+      = f.label :user_ids, "チャットメンバー", class: 'chat-group-form__label'
+
     .chat-group-form__field--right
-      / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-      = f.collection_check_boxes :user_ids, User.all, :id, :nickname
-      / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
+      #chat-group-users
+        - @group.users.each do |user|
+          #chat-group-user-8.chat-group-user.clearfix.js-chat-member
+            %input{name: 'group[user_ids][]', type: 'hidden', value: "#{ user.id }"}
+            %p.chat-group-user__name
+              = user.nickname
+            %p.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+
+      #member_search_result
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
