--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,5 @@
 
-.message
+.message{"data-message-id": "#{message.id}"}
   .message__upper-info
     .message__upper-info__talker
       = message.user.nickname
